--- a/spacex.css
+++ b/spacex.css
@@ -1,18 +1,31 @@
 body {
-    background-image: url("images/universe.jpg");
-    color: white;
-    background-size: cover;
+    color:#82a5ca;
     text-align: center;
     font-family: "Orbitron", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    margin: 0;
 }
-.btn-apply{
+#hero {
+    background-image: url("images/universe.gif");
+    background-size: cover;
+    padding: 10px 0 40px 0;
+}
+#logo {
+    mix-blend-mode: multiply;
+    width: 100px;
+}
+.btn{
+    color: #82a5ca;
     padding: 6px 12px;
     background-color: white;
     border: none;
     font-family: inherit;
     font-weight: bold; 
 }
+.underline{
+    border-bottom: 5px solid white;
+}
+
  
