--- a/spacex.css
+++ b/spacex.css
@@ -16,6 +16,9 @@ body {
     mix-blend-mode: multiply;
     width: 100px;
 }
+#title {
+    text-shadow: 0px 0px 4px black;
+}
 .btn{
     color: #82a5ca;
     padding: 6px 12px;
@@ -25,7 +28,7 @@ body {
     font-weight: bold; 
 }
 .underline{
-    border-bottom: 5px solid white;
+    border-bottom: 4px solid white;
 }
 
  
